# pysortfolder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
pysortfolder/: __init__.py  dirsize.py  meta.py  others.py  tree.py  version.py
sortfolder/: __init__.py  meta.py
tests/: test_sort.py
tests/data/: root_text1.txt
tests/data/subfolder1/: subfolder1_text1.txt  subfolder1_text2.txt
tests/data/subfolder1/subsubfolder/: subsubfolder1_text1.txt
tests/data/subfolder1/subsubfolder1/: subsubfolder1_text1.txt
tests/data/subfolder2/: subfolder2_text1.txt
